@@ -22,6 +22,7 @@
     * 4153 FIX: Fix forwarding notifications to Check_MK when no contact groups are set
     * 4155 FIX: Do not perform actions on events if overflow limit is active...
     * 4156 FIX: Fix off-by-one error in EC limit handling...
+    * 4199 FIX: Fix detection of replication mode if EC is distributed...
 
 
 1.4.0i3:
